k8s/overlays/prod/blue/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cinevision-blue
spec:
  host: api-gateway-blue
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
