k8s/overlays/prod/blue/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cinevision-vs
spec:
  hosts:
    - DOMAIN_NAME
    - api.DOMAIN_NAME
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-gateway-blue
            port:
              number: 80
          weight: 100
        - destination:
            host: api-gateway-green
            port:
              number: 80
          weight: 0
